# repo-roast

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/repo_roast/: __init__.py  cli.py  errors.py  github_client.py  roast.py  sanitize.py  stats.py
tests/: __init__.py  conftest.py  test_cli.py  test_github_client.py  test_packaging.py  test_roast.py  test_sanitize.py  test_stats.py
