[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-roast"
version = "0.1.0"
description = "Read a GitHub profile through the GitHub API, then roast its coding habits."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyGithub>=2.3",
    "openai>=1.40",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
repo-roast = "repo_roast.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["repo_roast"]

[tool.ruff]
# 90, not the default 88: the existing code already sits at this width, and a
# reformat-the-world commit would bury every future diff.
line-length = 90
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # import sorting
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "C4",   # comprehensions
    "RUF",  # ruff-specific
]

[tool.ruff.lint.flake8-bugbear]
# Typer's whole API is built on calls in argument defaults, which B008 forbids.
# Whitelist those two rather than switching the rule off everywhere.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.setuptools]
# src layout: importing repo_roast always resolves to the installed package,
# never to the working directory.
package-dir = { "" = "src" }
packages = ["repo_roast"]
